@@ -79,7 +79,7 @@ void Routine::InitProgram(std::initializer_list<const char *> source) {
   bool has_program;
   program_ = ProgramCache::Instance().Get(ProgramKeyRef{ context_(), device_(), precision_, routine_info },
                                           &has_program);
-  if (has_program) { return; }
+  if (has_program) { log_debug("Found program in cache"); return; }
 
   // Sets the build options from an environmental variable (if set)
   auto options = std::vector<std::string>();
@@ -96,10 +96,11 @@ void Routine::InitProgram(std::initializer_list<const char *> source) {
   auto binary = BinaryCache::Instance().Get(BinaryKeyRef{platform_id,  precision_, routine_info, device_name },
                                             &has_binary);
   if (has_binary) {
-    program_ = std::make_shared<Program>(Program(device_, context_, binary));
-    program_->Build(device_, options);
+    log_debug("Found binary in cache");
+    program_ = Program(device_, context_, binary);
+    program_.Build(device_, options);
     ProgramCache::Instance().Store(ProgramKey{ context_(), device_(), precision_, routine_info },
-                                    std::shared_ptr<Program>{program_});
+                                   Program{ program_ });
     return;
   }
 
@@ -135,10 +136,10 @@ void Routine::InitProgram(std::initializer_list<const char *> source) {
 
   // Store the compiled binary and program in the cache
   BinaryCache::Instance().Store(BinaryKey{platform_id, precision_, routine_info, device_name},
-                                program_->GetIR());
+                                program_.GetIR());
 
   ProgramCache::Instance().Store(ProgramKey{context_(), device_(), precision_, routine_info},
-                                 std::shared_ptr<Program>{program_});
+                                 Program{ program_ });
 }
 
 // =================================================================================================
