@@ -87,7 +87,7 @@ void RunKernel(Kernel &kernel, Queue &queue, const Device &device,
 // Sets all elements of a matrix to a constant value
 template <typename T>
 void FillMatrix(Queue &queue, const Device &device,
-                const std::shared_ptr<Program> program,
+                const Program &program,
                 EventPointer event, const std::vector<Event> &waitForEvents,
                 const size_t m, const size_t n, const size_t ld, const size_t offset,
                 const Buffer<T> &dest, const T constant_value, const size_t local_size) {
@@ -104,26 +104,26 @@ void FillMatrix(Queue &queue, const Device &device,
 }
 
 // Compiles the above function
-template void FillMatrix<half>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillMatrix<half>(Queue&, const Device&, const Program&,
                                EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                const size_t, const size_t, const Buffer<half>&, const half, const size_t);
-template void FillMatrix<float>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillMatrix<float>(Queue&, const Device&, const Program&,
                                 EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                 const size_t, const size_t, const Buffer<float>&, const float, const size_t);
-template void FillMatrix<double>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillMatrix<double>(Queue&, const Device&, const Program&,
                                  EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                  const size_t, const size_t, const Buffer<double>&, const double, const size_t);
-template void FillMatrix<float2>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillMatrix<float2>(Queue&, const Device&, const Program&,
                                  EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                  const size_t, const size_t, const Buffer<float2>&, const float2, const size_t);
-template void FillMatrix<double2>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillMatrix<double2>(Queue&, const Device&, const Program&,
                                   EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                   const size_t, const size_t, const Buffer<double2>&, const double2, const size_t);
 
 // Sets all elements of a vector to a constant value
 template <typename T>
 void FillVector(Queue &queue, const Device &device,
-                const std::shared_ptr<Program> program,
+                const Program &program,
                 EventPointer event, const std::vector<Event> &waitForEvents,
                 const size_t n, const size_t inc, const size_t offset,
                 const Buffer<T> &dest, const T constant_value, const size_t local_size) {
@@ -139,19 +139,19 @@ void FillVector(Queue &queue, const Device &device,
 }
 
 // Compiles the above function
-template void FillVector<half>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillVector<half>(Queue&, const Device&, const Program&,
                                EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                const size_t, const Buffer<half>&, const half, const size_t);
-template void FillVector<float>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillVector<float>(Queue&, const Device&, const Program&,
                                 EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                 const size_t, const Buffer<float>&, const float, const size_t);
-template void FillVector<double>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillVector<double>(Queue&, const Device&, const Program&,
                                  EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                  const size_t, const Buffer<double>&, const double, const size_t);
-template void FillVector<float2>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillVector<float2>(Queue&, const Device&, const Program&,
                                  EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                  const size_t, const Buffer<float2>&, const float2, const size_t);
-template void FillVector<double2>(Queue&, const Device&, const std::shared_ptr<Program>,
+template void FillVector<double2>(Queue&, const Device&, const Program&,
                                   EventPointer, const std::vector<Event>&, const size_t, const size_t,
                                   const size_t, const Buffer<double2>&, const double2, const size_t);
 
