@@ -1,6 +1,7 @@
 
 Development (next version)
 - Fixed an access violation under Windows upon releasing the OpenCL program when the driver is already unloaded
+- Fixed an issue with incorrect cl_program release in the CLBlast caching system
 
 Version 1.4.0
 - Added Python interface to CLBlast 'PyCLBlast'
